--- a/materi-outside.html
+++ b/materi-outside.html
@@ -36,14 +36,35 @@
   </div>
 </nav>
 
-<div class="jumbotron text-center">
-    <h1>Let's Get Exited
-        About Relations And Functions !!!</h1> 
-    <p>Selamat datang di Math Edu, tempat paling keren di web untuk belajar tentang relasi dan fungsi. Dibuat dari pikiran para ahli matematika jenius, ini adalah sumber daya terbaik untuk siswa sekolah menengah pertama!</p> 
-    <div class="menu-img">
-        <img src="./images/0.png" width="100%" alt="" />
+<div id="materi" class="bg-1">
+    <div class="container">
+      <h3 class="text-justified">Materi Pembelajaran</h3>
+      <p class="text-center">Pilih materi pembelajaran yang kamu inginkan!</p>
+      
+      <div class="row text-center">
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img/relasi.png" alt="Relasi" width="400" height="300">
+            <p><strong>Relasi</strong></p>
+            <button class="btn" data-toggle="modal" data-target="#myModal">Lihat</button>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img/relasi.png" alt="Fungsi" width="400" height="300">
+            <p><strong>Fungsi</strong></p>
+            <button class="btn" data-toggle="modal" data-target="#myModal">Lihat</button>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img/relasi.png" alt="Korespondensi Satu-satu" width="400" height="300">
+            <p><strong>Korespondensi Satu-satu</strong></p>
+            <button class="btn" data-toggle="modal" data-target="#myModal">Lihat</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
 <!-- Footer -->
   <footer id="footer">
