--- a/index.html
+++ b/index.html
@@ -1,145 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fungsi dalam Matematika</title>
     <link rel="stylesheet" href="css/index.css" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
+
 <body>
 
-<div class="home-qmE" id="1:131">
-    <div class="group-519-fEU" id="1:133">
-        <div class="rectangle-328-irx" id="1:134"></div>
-        <div class="blur-QDz" id="1:135">
-            <div class="ellipse-155-VFS" id="1:137"></div>
-            <div class="ellipse-154-7nc" id="1:136"></div>
-        </div>
-        <img class="group-499-CZA" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:138"/>
-        <img class="group-498-X5e" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:146"/>
-        <div class="group-515-SCc" id="1:154">
-            <div class="ellipse-159-KnC" id="1:161"></div>
-            <div class="ellipse-158-K9v" id="1:160"></div>
-            <img class="sketch-annotation-element-stroke-abstract-highlight-bling-line-1-12k" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:155"/>
-            <div class="ellipse-156-JGk" id="1:159"></div>
-        </div>
-        <div class="frame-7-ydn" id="1:162">
-            <div class="frame-5-unL" id="1:167">
-                <div class="frame-3-cgk" id="1:168">
-                    <img class="image-2-Lck" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:169"/>
-                    <div class="input-with-label-cCt" id="1:172">
-                        <div class="input-wW4" id="1:174">
-                            <div class="content-fwr" id="1:175">
-                                <div class="auto-group-re2g-q5e" id="YYiLDhumvvCvbgxTmyRe2g">
-                                    <img class="search-wPa" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:176"/>
-                                    <p class="text-d1W" id="1:178">Want to learn?</p>
-                                </div>
-                                <div class="button-JtL" id="1:179">
-                                    <div class="button-base-GaG" id="1:180">
-                                        <p class="text-CTv" id="1:181">Explore</p>
-                                        <img class="chevron-down-Jmr" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:182"/>
+    <div class="container home-qmE" id="1:131">
+        <div class="group-519-fEU" id="1:133">
+            <div class="rectangle-328-irx" id="1:134"></div>
+            <div class="blur-QDz" id="1:135">
+                <div class="ellipse-155-VFS" id="1:137"></div>
+                <div class="ellipse-154-7nc" id="1:136"></div>
+            </div>
+            <img class="group-499-CZA" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:138" />
+            <img class="group-498-X5e" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:146" />
+            <div class="group-515-SCc" id="1:154">
+                <div class="ellipse-159-KnC" id="1:161"></div>
+                <div class="ellipse-158-K9v" id="1:160"></div>
+                <img class="sketch-annotation-element-stroke-abstract-highlight-bling-line-1-12k"
+                    src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:155" />
+                <div class="ellipse-156-JGk" id="1:159"></div>
+            </div>
+            <div class="frame-7-ydn" id="1:162">
+                <div class="frame-5-unL" id="1:167">
+                    <div class="frame-3-cgk" id="1:168">
+                        <img class="image-2-Lck" src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                            id="1:169" />
+                        <div class="input-with-label-cCt" id="1:172">
+                            <div class="input-wW4" id="1:174">
+                                <div class="content-fwr" id="1:175">
+                                    <div class="auto-group-re2g-q5e" id="YYiLDhumvvCvbgxTmyRe2g">
+                                        <img class="search-wPa"
+                                            src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:176" />
+                                        <p class="text-d1W" id="1:178">Want to learn?</p>
+                                    </div>
+                                    <div class="button-JtL" id="1:179">
+                                        <div class="button-base-GaG" id="1:180">
+                                            <p class="text-CTv" id="1:181">Explore</p>
+                                            <img class="chevron-down-Jmr"
+                                                src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                                                id="1:182" />
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="frame-4-mYx" id="1:184">
+                        <p class="home-5pY" id="1:185">Home</p>
+                        <p class="materi-CeG" id="1:186">Materi</p>
+                        <p class="ujian-kQt" id="1:187">Ujian</p>
+                        <p class="contact-us-JBW" id="1:188">Contact us</p>
+                    </div>
                 </div>
-                <div class="frame-4-mYx" id="1:184">
-                    <p class="home-5pY" id="1:185">Home</p>
-                    <p class="materi-CeG" id="1:186">Materi</p>
-                    <p class="ujian-kQt" id="1:187">Ujian</p>
-                    <p class="contact-us-JBW" id="1:188">Contact us</p>
+                <img class="desain-tanpa-judul-14-1-qBS" src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                    id="1:190" />
+                <div class="mask-group-YrY" id="1:191">
+                    <div class="auto-group-kke8-Dxg" id="YYiLhGxAroqszLqxM5KkE8">
+                        <div class="frame-14-A7E" id="1:220">
+                            <div class="frame-8-g5a" id="1:221">
+                                <p class="lets-get-exited-about-relations-and-functions--2QL" id="1:222">
+                                    <span class="lets-get-exited-about-relations-and-functions--2QL-sub-0">
+                                        Let’s Get Exited
+
+                                        <br />
+                                        About
+
+                                    </span>
+                                    <span
+                                        class="lets-get-exited-about-relations-and-functions--2QL-sub-1">Relations</span>
+                                    <span class="lets-get-exited-about-relations-and-functions--2QL-sub-2"> And </span>
+                                    <span class="lets-get-exited-about-relations-and-functions--2QL-sub-3">Functions
+                                    </span>
+                                    <span class="lets-get-exited-about-relations-and-functions--2QL-sub-4">!!!</span>
+                                </p>
+                                <p class="selamat-datang-di-math-edu-tempat-paling-keren-di-web-untuk-belajar-tentang-relasi-dan-fungsi-dibuat-dari-pikiran-para-ahli-matematika-jenius-ini-adalah-sumber-daya-terbaik-untuk-siswa-sekolah-menengah-pertama-7s2"
+                                    id="1:223">Selamat datang di Math Edu, tempat paling keren di web untuk belajar
+                                    tentang relasi dan fungsi. Dibuat dari pikiran para ahli matematika jenius, ini
+                                    adalah sumber daya terbaik untuk siswa sekolah menengah pertama!</p>
+                            </div>
+                            <div class="button-8n8" id="1:225">
+                                <div class="button-base-VMn" id="1:226">Get Started</div>
+                            </div>
+                        </div>
+                        <div class="auto-group-usmr-Krc" id="YYiLsSKuUnuANiAkyTUSMr">
+                            <div class="placeholder-rLk" id="1:193"></div>
+                            <div class="placeholder-Xhn" id="1:194"></div>
+                            <div class="ellipse-1-Dac" id="1:195"></div>
+                            <div class="item-02-KtY" id="1:196">
+                                <img class="progress-circle-fqv"
+                                    src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:197" />
+                                <p class="materi-zdJ" id="1:201">Materi</p>
+                            </div>
+                            <img class="mask-group-Dkx" src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                                id="1:202" />
+                            <div class="item-03-utg" id="1:205">
+                                <img class="icon-Apc" src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                                    id="1:206" />
+                                <p class="quizz-dan-ujian-syv" id="1:218">Quizz dan Ujian</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ellipse-157-Tx8" id="1:228"></div>
                 </div>
             </div>
-            <img class="desain-tanpa-judul-14-1-qBS" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:190"/>
-            <div class="mask-group-YrY" id="1:191">
-                <div class="auto-group-kke8-Dxg" id="YYiLhGxAroqszLqxM5KkE8">
-                    <div class="frame-14-A7E" id="1:220">
-                        <div class="frame-8-g5a" id="1:221">
-                            <p class="lets-get-exited-about-relations-and-functions--2QL" id="1:222">
-                                <span class="lets-get-exited-about-relations-and-functions--2QL-sub-0">
-                                    Let’s Get Exited
-
-                                    <br/>
-                                    About
-
-                                </span>
-                                <span class="lets-get-exited-about-relations-and-functions--2QL-sub-1">Relations</span>
-                                <span class="lets-get-exited-about-relations-and-functions--2QL-sub-2"> And </span>
-                                <span class="lets-get-exited-about-relations-and-functions--2QL-sub-3">Functions </span>
-                                <span class="lets-get-exited-about-relations-and-functions--2QL-sub-4">!!!</span>
-                            </p>
-                            <p class="selamat-datang-di-math-edu-tempat-paling-keren-di-web-untuk-belajar-tentang-relasi-dan-fungsi-dibuat-dari-pikiran-para-ahli-matematika-jenius-ini-adalah-sumber-daya-terbaik-untuk-siswa-sekolah-menengah-pertama-7s2" id="1:223">Selamat datang di Math Edu, tempat paling keren di web untuk belajar tentang relasi dan fungsi. Dibuat dari pikiran para ahli matematika jenius, ini adalah sumber daya terbaik untuk siswa sekolah menengah pertama!</p>
-                        </div>
-                        <div class="button-8n8" id="1:225">
-                            <div class="button-base-VMn" id="1:226">Get Started</div>
+        </div>
+        <div class="frame-408-mT2" id="1:229">
+            <div class="frame-399-5ic" id="1:230">
+                <p class="heading-mbS" id="1:233">Let’s Get Function-al!</p>
+                <div class="frame-396-Go6" id="1:235">
+                    <div class="frame-21-d7r" id="1:236">
+                        <div class="frame-19-8qJ" id="1:237">
+                            <div class="frame-18-gbv" id="1:238">
+                                <img class="frame-390-Qnp" src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                                    id="1:239" />
+                                <p class="materi-Y8L" id="1:249">Materi</p>
+                            </div>
+                            <p class="pembahasan-terkait-materi-relasi-dan-fungsi-fTr" id="1:250">Pembahasan terkait
+                                materi relasi dan fungsi.</p>
                         </div>
                     </div>
-                    <div class="auto-group-usmr-Krc" id="YYiLsSKuUnuANiAkyTUSMr">
-                        <div class="placeholder-rLk" id="1:193"></div>
-                        <div class="placeholder-Xhn" id="1:194"></div>
-                        <div class="ellipse-1-Dac" id="1:195"></div>
-                        <div class="item-02-KtY" id="1:196">
-                            <img class="progress-circle-fqv" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:197"/>
-                            <p class="materi-zdJ" id="1:201">Materi</p>
-                        </div>
-                        <img class="mask-group-Dkx" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:202"/>
-                        <div class="item-03-utg" id="1:205">
-                            <img class="icon-Apc" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:206"/>
-                            <p class="quizz-dan-ujian-syv" id="1:218">Quizz dan Ujian</p>
+                    <div class="frame-22-KoJ" id="1:251">
+                        <div class="frame-19-4F6" id="1:252">
+                            <div class="frame-18-pEG" id="1:253">
+                                <img class="frame-391-9XS" src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                                    id="1:254" />
+                                <p class="ujian-UZi" id="1:260">Ujian</p>
+                            </div>
+                            <p class="soal-ujian-terkait-materi-relasi-dan-fungsi-ort" id="1:261">Soal Ujian terkait
+                                materi Relasi dan Fungsi</p>
                         </div>
                     </div>
                 </div>
-                <div class="ellipse-157-Tx8" id="1:228"></div>
+            </div>
+            <div class="quote-section-eMi" id="1:263">
+                <p class="quote-BMe" id="1:267">Courses was fantastic! It is Master platform for those looking to start
+                    a new career about math.</p>
+            </div>
+            <div class="footer-JBN" id="1:268">
+                <div class="section-Eap" id="1:269">
+                    <div class="logo-and-supporting-text-PyW" id="1:272">
+                        <img class="image-2-XZv" src="/api/try-prod-ap-southeast-1-first-cluster/project..."
+                            id="1:273" />
+                        <p class="supporting-text-TyN" id="1:274">Top e-learning yang membuat talenta matematikawan di
+                            seluruh dunia.</p>
+                    </div>
+                    <div class="section-Cg4" id="1:276">
+                        <p class="footer-text-Yzp" id="1:279">
+                            chaiiii.0110@gmail.com
+
+                            <br />
+                            © 2024 Chayun Fadila. All rights reserved.
+
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="frame-408-mT2" id="1:229">
-        <div class="frame-399-5ic" id="1:230">
-            <p class="heading-mbS" id="1:233">Let’s Get Function-al!</p>
-            <div class="frame-396-Go6" id="1:235">
-                <div class="frame-21-d7r" id="1:236">
-                    <div class="frame-19-8qJ" id="1:237">
-                        <div class="frame-18-gbv" id="1:238">
-                            <img class="frame-390-Qnp" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:239"/>
-                            <p class="materi-Y8L" id="1:249">Materi</p>
-                        </div>
-                        <p class="pembahasan-terkait-materi-relasi-dan-fungsi-fTr" id="1:250">Pembahasan terkait materi relasi dan fungsi.</p>
-                    </div>
-                </div>
-                <div class="frame-22-KoJ" id="1:251">
-                    <div class="frame-19-4F6" id="1:252">
-                        <div class="frame-18-pEG" id="1:253">
-                            <img class="frame-391-9XS" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:254"/>
-                            <p class="ujian-UZi" id="1:260">Ujian</p>
-                        </div>
-                        <p class="soal-ujian-terkait-materi-relasi-dan-fungsi-ort" id="1:261">Soal Ujian terkait materi Relasi dan Fungsi</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="quote-section-eMi" id="1:263">
-            <p class="quote-BMe" id="1:267">Courses was fantastic! It is Master platform for those looking to start a new career about math.</p>
-        </div>
-        <div class="footer-JBN" id="1:268">
-            <div class="section-Eap" id="1:269">
-                <div class="logo-and-supporting-text-PyW" id="1:272">
-                    <img class="image-2-XZv" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:273"/>
-                    <p class="supporting-text-TyN" id="1:274">Top e-learning yang membuat talenta matematikawan di seluruh dunia.</p>
-                </div>
-                <div class="section-Cg4" id="1:276">
-                    <p class="footer-text-Yzp" id="1:279">
-                        chaiiii.0110@gmail.com
-                        
-                        <br/>
-                        © 2024 Chayun Fadila. All rights reserved.
-                    
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
 
 </body>
+
 </html>
