--- a/signin.html
+++ b/signin.html
@@ -1,57 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fungsi dalam Matematika</title>
-    <link rel="stylesheet" href="css/signin.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <script src="https://srv.buysellads.com/ads/CESI627W.json?callback=customJSONPCallback"></script>
 </head>
-<body>
 
-<div class="frame-409-48C" id="1:1130">
-    <div class="sign-in-6Kn" id="1:985">
-        <div class="content-m4Y" id="1:988">
-            <div class="text-FVW" id="1:989">
-                <p class="sign-in-CQk" id="1:990">Sign in</p>
-                <p class="silahkan-masuk-untuk-melanjutkan-ke-akun-anda-RoJ" id="1:991">Silahkan masuk untuk melanjutkan ke akun anda</p>
-            </div>
-            <div class="auto-group-sang-vVA" id="YYieAmqRpVpHZu1uXrSAng">
-                <div class="form-GJ8" id="1:992">
-                    <div class="input-ZY8" id="1:993">
-                        <div class="label-eCC" id="1:996">Email</div>
-                        <div class="auto-group-kqtp-7Lg" id="YYieNbq47fBDpXFEd7kqtp">
-                            <p class="jonaskahnwaldgmailcom-SNx" id="1:994">jonas_kahnwald@gmail.com</p>
-                            <p class="item--ZTa" id="1:995">|</p>
-                        </div>
+<body class="sign">
+    <div class="container-fluid">
+        <div class="row card-container d-flex justify-content-center align-items-center">
+            <div class="card d-flex flex-row justify-content-center align-items-center shadow px-3 py-3">
+                <div class="col-md-6 text-black align-items-center px-3 py-3">
+                    <div class="d-flex align-items-center justify-content-center h-custom-2">
+
+                        <form action="" id="formvalidate">
+
+                            <h3 class="mb-3" style="letter-spacing: 1px;">Sign In</h3>
+                            <p class="text-secondary mb-3">Silahkan masuk untuk melanjutkan akun anda</p>
+
+                            <div class="input-group mb-3">
+                                <label class="palceholder" for="userEmail">Email</label>
+                                <input class="form-control" name="userEmail" id="userEmail" type="text"
+                                    placeholder="" />
+                            </div>
+                            <div class="input-group mb-2">
+                                <label class="palceholder" for="userPassword">Password</label>
+                                <input class="form-control" name="userPassword" id="userPassword" type="password"
+                                    placeholder="" />
+                                <span class="toggle-password bi bi-eye text-muted"
+                                    onclick="togglePasswordVisibility()"></span>
+
+                            </div>
+
+                            <div class="clearfix supporter mb-4">
+                                <div class="pull-left remember-me">
+                                    <input id="rememberMe" type="checkbox">
+                                    <label class="small text-muted" for="rememberMe">Remember Me</label>
+                                </div>
+                                <!--<a class="forgot pull-right small text-muted" href="#">Forgot Password?</a>-->
+                            </div>
+
+                            <button type="submit" id="login" style="border-radius: 10px;">Login</button>
+
+                            <p class="pt-3 small text-muted text-center">Don't have an account? <a href=" #!" class="link-info">Register
+                                    here</a></p>
+
+                        </form>
+
                     </div>
-                    <div class="input-3de" id="1:998">
-                        <p class="password-ada" id="1:999">Password</p>
-                        <img class="eye-off-6rp" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1000"/>
-                    </div>
-                    <div class="keep-DgY" id="1:1001">
-                        <img class="square-Mnk" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1002"/>
-                        <p class="keep-me-logged-in-h5v" id="1:1003">Keep me logged in</p>
-                    </div>
-                    <div class="button-RGp" id="1:1004">Sign in</div>
-                    <div class="or-6dr" id="1:1006">
-                        <img class="vector-1-efN" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1007"/>
-                        <p class="or-bKi" id="1:1008">or</p>
-                        <img class="vector-2-Xz4" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1009"/>
-                    </div>
-                    <div class="button-HCY" id="1:1010">
-                        <p class="sign-in-with-google-pTN" id="1:1011">Sign in with Google</p>
-                        <img class="plus-vFW" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1012"/>
-                    </div>
+
                 </div>
-                <p class="need-an-account-create-one-Mrc" id="1:1013">
-                    <span class="need-an-account-create-one-Mrc-sub-0">Need an account? </span>
-                    <span class="need-an-account-create-one-Mrc-sub-1">Create one</span>
-                </p>
+                <div class="img-main-box col-md-6 d-none d-sm-block">
+                    <img src="./assets/images/top-view-composition.jpg" alt="Login image" class="login-img img-responsive"
+                        style="border-radius: 10px;">
+                </div>
             </div>
         </div>
-        <img class="container-GEp" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1015"/>
     </div>
-</div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js'></script>
+    <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
