--- a/signup.html
+++ b/signup.html
@@ -1,65 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fungsi dalam Matematika</title>
-    <link rel="stylesheet" href="css/signup.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <script src="https://srv.buysellads.com/ads/CESI627W.json?callback=customJSONPCallback"></script>
 </head>
-<body>
 
-<div class="frame-410-JgL" id="1:1131"> 
-    <div class="sign-up-8fN" id="1:1016">
-        <div class="content-tRa" id="1:1019">
-            <div class="text-yxp" id="1:1020">
-                <p class="sign-up-iQc" id="1:1021">Sign up</p>
-                <p class="sign-up-to-enjoy-the-feature-of-revolutie-ybS" id="1:1022">Sign up to enjoy the feature of Revolutie</p>
-            </div>
-            <div class="form-tCc" id="1:1023">
-                <div class="input-23v" id="1:1024">
-                    <div class="label-Y2G" id="1:1026">Your Name</div>
-                    <p class="jonas-khanwald-yFz" id="1:1025">
-                        <span class="jonas-khanwald-yFz-sub-0">J</span>
-                        <span class="jonas-khanwald-yFz-sub-1">onas Khanwald</span>
-                    </p>
-                </div>
-                <div class="input-RGQ" id="1:1028">
-                    <div class="label-vDA" id="1:1031">Date of Birth</div>
-                    <div class="auto-group-yvqi-onk" id="YYifXpQ47yf7dh62dDYvqi">
-                        <img class="calendar-7YY" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1029"/>
-                        <p class="december-1997-3wz" id="1:1030">11 December 1997</p>
+<body class="sign">
+    <div class="container-fluid">
+        <div class="row px-3 py-3 card-container d-flex justify-content-center align-items-center">
+            <div class="card d-flex flex-row justify-content-center align-items-center shadow px-3 py-3">
+                <div class="col-md-6 text-black align-items-center px-3 py-3">
+                    <div class="d-flex align-items-center justify-content-center h-custom-2">
+
+                        <form action="" id="formvalidate">
+
+                            <h3 class="mb-3" style="letter-spacing: 1px;">Sign Up</h3>
+                            <p class="text-secondary mb-3">Silahkan masuk untuk melanjutkan akun anda</p>
+
+                            <div class="input-group mb-3">
+                                <label class="palceholder" for="userName">Name</label>
+                                <input class="form-control" name="userName" id="userName" type="text" placeholder="" />
+                            </div>
+                            <div class="input-group mb-3">
+                                <label class="palceholder" for="userEmail">Email</label>
+                                <input class="form-control" name="userEmail" id="userEmail" type="text"
+                                    placeholder="" />
+                            </div>
+                            <div class="input-group mb-3">
+                                <label class="palceholder" for="userPassword">Password</label>
+                                <input class="form-control" name="userPassword" id="userPassword" type="password"
+                                    placeholder="" />
+                                <span class="toggle-password bi bi-eye text-muted"
+                                    onclick="togglePasswordVisibility()"></span>
+                            </div>
+                            <div class="input-group mb-2">
+                                <label class="palceholder" for="userPassword">Confirm Password</label>
+                                <input class="form-control" name="userPassword" id="userPassword" type="password"
+                                    placeholder="" />
+                                <span class="toggle-password bi bi-eye text-muted"
+                                    onclick="togglePasswordVisibility()"></span>
+                            </div>
+
+                            <div class="clearfix supporter mb-4">
+                                <div class="pull-left remember-me">
+                                    <input id="rememberMe" type="checkbox">
+                                    <label class="fs-12 small text-muted" for="rememberMe">Remember Me</label>
+                                </div>
+                                <!--<a class="forgot pull-right fs-12 small text-muted" href="#">Forgot Password?</a>-->
+                            </div>
+
+                            <button type="submit" id="login" style="border-radius: 10px;">Login</button>
+
+                            <p class="pt-3 text-center small text-muted">Don't have an account? <a href=" #!"
+                                    class="link-info">Register
+                                    here</a></p>
+
+                        </form>
+
                     </div>
+
                 </div>
-                <div class="input-xJG" id="1:1033">
-                    <div class="label-gk4" id="1:1036">Email</div>
-                    <div class="auto-group-cqst-PPa" id="YYifgZeUvAFnw3LnZMCqSt">
-                        <p class="jonaskahnwaldgmailcom-igk" id="1:1034">jonas_kahnwald@gmail.com</p>
-                        <p class="item--rHA" id="1:1035">|</p>
-                    </div>
-                </div>
-                <div class="input-w3i" id="1:1038">
-                    <p class="password-Tnk" id="1:1039">Password</p>
-                    <img class="eye-off-oLp" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1040"/>
-                </div>
-                <div class="button-JHa" id="1:1041">Sign up</div>
-                <div class="or-Aqa" id="1:1043">
-                    <img class="vector-1-7kp" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1044"/>
-                    <p class="or-eVr" id="1:1045">or</p>
-                    <img class="vector-2-C1a" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1046"/>
-                </div>
-                <div class="button-k36" id="1:1047">
-                    <p class="continue-with-google-HHv" id="1:1048">Continue with Google</p>
-                    <img class="plus-nkU" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1049"/>
+                <div class="img-main-box col-md-6 d-none d-sm-block">
+                    <img src="./assets/images/top-view-composition.jpg" alt="Login image" class="img-responsive"
+                        style="border-radius: 10px; height: 75vh;">
                 </div>
             </div>
-            <p class="already-have-an-account-sign-in-EsN" id="1:1050">
-                <span class="already-have-an-account-sign-in-EsN-sub-0">Already have an account?? </span>
-                <span class="already-have-an-account-sign-in-EsN-sub-1">Sign in</span>
-            </p>
         </div>
-        <img class="container-sJ4" src="/api/try-prod-ap-southeast-1-first-cluster/project..." id="1:1052"/>
     </div>
-</div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js'></script>
+    <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
