feat:styling footer

--- a/contact-us.html
+++ b/contact-us.html
@@ -49,7 +49,7 @@
   </nav>
   <div class="container ">
 
-    <section class="contact">
+    <div class="contact">
       <div class="row card-container d-flex justify-content-center align-items-center">
         <div class="card d-flex flex-row justify-content-center align-items-center shadow px-3 py-3">
           <!--<div class="contact100-form-title container pt-1 pb-5">-->
@@ -85,8 +85,39 @@
           </form>
         </div>
       </div>
-    </section>
+    </div>
   </div>
+
+  <footer>
+    <div class="footer container-fluid position-relative bg-light-radial text-white-50 bg-dark">
+      <div class="container">
+        <div class="row featurette g-5">
+          <div class="col-md-4 justify-content-start">
+            <div class="row featurette g-5">
+              <div class="col-lg-12">
+                <h4 class="text-white text-uppercase mb-3">Information</h4>
+                <div class="d-flex flex-column">
+                  <p>Top e-learning yang membuat talenta matematikawan di seluruh dunia.</p>
+                  <p><i class="fa fa-map-marker-alt me-2"></i>Semarang, Jawa Tengah, Indonesia
+                  </p>
+                  <p><i class="fa fa-envelope me-2 mb-4"></i>chaiiii.0110@gmail.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid bg-light-radial text-white border-top border-success px-0 bg-dark">
+      <div class="d-flex flex-column flex-md-row featurette justify-content-center">
+        <div class="py-4 px-5 text-center text-md-center">
+          <p class="mb-0">Copyright &copy; <span class="text-success" href="">Dynamics Math All Right Reserved
+            </span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
