--- a/contact-us.html
+++ b/contact-us.html
@@ -47,9 +47,8 @@
       <div class="nav-profile justify-content-end"><a href=""><img src="assets/theme/Jenusa.png" alt="..."></a></div>
     </div>
   </nav>
-  <div class="container ">
-
-    <div class="contact">
+  <div class="container">
+    <div class="contact mt-3">
       <div class="row card-container d-flex justify-content-center align-items-center">
         <div class="card d-flex flex-row justify-content-center align-items-center shadow px-3 py-3">
           <!--<div class="contact100-form-title container pt-1 pb-5">-->
