feat:add user profile page

--- a/userprofile.html
+++ b/userprofile.html
@@ -47,48 +47,24 @@
       <div class="nav-profile justify-content-end"><a href=""><img src="assets/theme/Jenusa.png" alt="..."></a></div>
     </div>
   </nav>
+
   <div class="container">
-    <div class="contact mt-3">
-      <div class="row card-container d-flex justify-content-center align-items-center">
-        <div class="card d-flex flex-row justify-content-center align-items-center shadow px-3 py-3">
-          <!--<div class="contact100-form-title container pt-1 pb-5">-->
-          <form class="contact100-form validate-form" action="" id="formvalidate">
-            <h3 class="mt-5 mb-5 text-center" style="letter-spacing: 1px; color: #00A885;">Contact Us
-            </h3>
-
-            <div class="input-group mb-3">
-              <label class="palceholder" for="userName">Name</label>
-              <input class="form-control" name="userName" id="userName" type="text" placeholder="" />
-            </div>
-            <div class="input-group mb-3">
-              <label class="palceholder" for="userEmail">Email</label>
-              <input class="form-control" name="userEmail" id="userEmail" type="text" placeholder="" />
-            </div>
-            <div class="input-group mb-3">
-              <label class="palceholder" for="userEmail">Message</label>
-              <textarea class="form-control" name="userEmail" id="userEmail" type="text" placeholder=""></textarea>
-            </div>
-
-            <div class="container-contact100-form-btn mb-3 pb-3">
-              <button class="contact100-form-btn" style="border-radius: 10px;">
-                <span>
-                  Submit
-                  <!--<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>-->
-                </span>
-              </button>
-            </div>
-            <div class="container-contact100-form-btn response" style="margin-top: 30px;">
-              <p class="error">
-              </p>
-            </div>
-          </form>
+    <div class="profile mt-3">
+      <div class="row card-container d-flex justify-content-center mt-5">
+        <div class="card d-flex align-items-center shadow px-3 py-3 mt-5 mb-5" style="min-width: 50% !important; ">
+          <h3 class="mt-5 mb-5 text-center" style="letter-spacing: 1px; color: #00A885;">Profile
+          </h3>
+          <div class="user-img"><img src="./assets/images/sign.png" alt="..." class="img-responsive rounded"
+              style="width: 150px; height: 150px;"></div>
+          <p class="fw-bold text-center mt-5">Chayun Fadila</p>
+          <p class="text-muted text-center mb-5">ChayunFadila@gemail.kom</p>
         </div>
       </div>
     </div>
   </div>
 
   <footer>
-    <div class="footer container-fluid position-relative bg-light-radial text-white-50 bg-dark">
+    <div class="footer container-fluid position-relative bg-light-radial text-white-50 bg-dark mt-5">
       <div class="container">
         <div class="row featurette g-5">
           <div class="col-md-4 justify-content-start">
