--- a/contact-us.html
+++ b/contact-us.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link  active" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="blog.html">Materi</a>
@@ -40,7 +40,7 @@
             <a class="nav-link" href="about.html">Ujian</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link  active" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
